# NumberReaderAI

./: data_handler.py  interface.py  network.py  pyproject.toml
Documentation/: README.md  Viikkoraportti 1.md  Viikkoraportti 2.md  Viikkoraportti 3.md  maarittelydokumentti.md
tests/: data_test.py  network_test.py
