[project]
name = "numberreaderai"
version = "0.1.0"
description = ""
authors = [
    {name = "Mrivu",email = "iivari2006@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)"
]

[tool.poetry]
package-mode = false